force-app/main/default/objects/Knowledge__kav/fields/Definitions__c.field-meta.xml
<CustomField>
    <fullName>Definitions__c</fullName>
    <label>Definitions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>