force-app/main/default/objects/Knowledge__kav/fields/Diagnostic_Steps__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Steps__c</fullName>
    <label>Diagnostic Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>