force-app/main/default/objects/Knowledge__kav/fields/Issue_Description1__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description1__c</fullName>
    <label>Issue Description (Rich Text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>