force-app/main/default/objects/Knowledge__kav/fields/Issue_Description_del__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description_del__c</fullName>
    <description>Brief Description of the issue being addressed with this TSB</description>
    <label>Issue Description</label>
    <length>25500</length>
    <type>LongTextArea</type>
</CustomField>