force-app/main/default/objects/Knowledge__kav/fields/Labor_Information__c.field-meta.xml
<CustomField>
    <fullName>Labor_Information__c</fullName>
    <label>Labor Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>