force-app/main/default/objects/Knowledge__kav/fields/Parts_Required__c.field-meta.xml
<CustomField>
    <fullName>Parts_Required__c</fullName>
    <label>Parts Required:</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>