force-app/main/default/objects/Knowledge__kav/fields/Parts_Return_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Parts_Return_Disposition__c</fullName>
    <label>Parts Return Disposition</label>
    <length>250</length>
    <type>Text</type>
</CustomField>