force-app/main/default/objects/Knowledge__kav/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <label>Process Flow</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>