force-app/main/default/objects/Knowledge__kav/fields/Repair_Steps__c.field-meta.xml
<CustomField>
    <fullName>Repair_Steps__c</fullName>
    <label>Repair Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>