force-app/main/default/objects/Knowledge__kav/fields/Sharing_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Public_URL__c</fullName>
    <description>&quot;https://gillig--dev0323.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;   UrlName</description>
    <formula>&quot;https://gillig.lightning.force.com/lightning/articles/Knowledge/&quot;&amp;   UrlName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sharing Public URL</label>
    <type>Text</type>
</CustomField>