force-app/main/default/objects/Knowledge__kav/fields/Symptoms1__c.field-meta.xml
<CustomField>
    <fullName>Symptoms1__c</fullName>
    <label>Symptoms (Rich Text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>