force-app/main/default/objects/Knowledge__kav/fields/Symptoms_del__c.field-meta.xml
<CustomField>
    <fullName>Symptoms_del__c</fullName>
    <label>Symptoms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>