force-app/main/default/objects/Knowledge__kav/fields/Tools_Required1__c.field-meta.xml
<CustomField>
    <fullName>Tools_Required1__c</fullName>
    <label>Tools Required (Rich Text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>