force-app/main/default/objects/Knowledge__kav/fields/Tools_Required_del__c.field-meta.xml
<CustomField>
    <fullName>Tools_Required_del__c</fullName>
    <label>Tools Required:</label>
    <type>TextArea</type>
</CustomField>