force-app/main/default/objects/Knowledge__kav/fields/TSB_Number__c.field-meta.xml
<CustomField>
    <fullName>TSB_Number__c</fullName>
    <label>TSB Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>