force-app/main/default/objects/Knowledge__kav/fields/Vendor_Article__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Article__c</fullName>
    <description>A URL Link to the Vendor Article</description>
    <label>Vendor Article</label>
    <type>Url</type>
</CustomField>