force-app/main/default/objects/Knowledge__kav/fields/Warranty_Claims__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claims__c</fullName>
    <label>Warranty Claims</label>
    <type>TextArea</type>
</CustomField>