force-app/main/default/objects/Knowledge__kav/recordTypes/Customer_Service_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service_Campaign</fullName>
    <active>true</active>
    <label>Customer Service Campaign</label>
</RecordType>