force-app/main/default/objects/Knowledge__kav/recordTypes/Diagnostic_and_Repair_Plan.recordType-meta.xml
<RecordType>
    <fullName>Diagnostic_and_Repair_Plan</fullName>
    <active>true</active>
    <label>Diagnostic and Repair Plan</label>
</RecordType>