force-app/main/default/objects/Knowledge__kav/recordTypes/Field_Service_Bulletin.recordType-meta.xml
<RecordType>
    <fullName>Field_Service_Bulletin</fullName>
    <active>true</active>
    <label>Field Service Bulletin</label>
</RecordType>