force-app/main/default/objects/Knowledge__kav/recordTypes/Field_Service_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Field_Service_Campaign</fullName>
    <active>true</active>
    <label>Field Service Campaign</label>
</RecordType>