force-app/main/default/objects/Knowledge__kav/recordTypes/Safety_Recall_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Safety_Recall_Campaign</fullName>
    <active>true</active>
    <label>Safety Recall Campaign</label>
</RecordType>