force-app/main/default/objects/Knowledge__kav/recordTypes/Technical_Service_Bulletin.recordType-meta.xml
<RecordType>
    <fullName>Technical_Service_Bulletin</fullName>
    <active>true</active>
    <label>Technical Service Bulletin</label>
</RecordType>